--- a/docs/release-notes/5.41.1/changelog.mdx
+++ b/docs/release-notes/5.41.1/changelog.mdx
@@ -8,13 +8,13 @@ description: See what's new in Webiny version 5.41.1
 
 ## Security
 
-### External Identity Providers - Assigning Groups Now Works As Expected ([#4349](https://github.com/webiny/webiny-js/pull/4349)]
+### External Identity Providers - Roles and Teams Assignments ([#4349](https://github.com/webiny/webiny-js/pull/4349)]
 
-We've addressed a couple of issues related to assigning roles when using external identity providers like [Auth0](/docs/enterprise/auth0-integration) or [Okta](/docs/enterprise/okta-integration). 
+We've addressed a couple of issues related to assigning roles when using external identity providers, like [Auth0](/docs/enterprise/auth0-integration) or [Okta](/docs/enterprise/okta-integration). We've also added one new feature. More information can be found below.
 
 #### 1. `groups` Property Now Works As Expected
 
-Using Auth0 and assigning roles via the newly introduced `groups` property would not work:
+Prior to this release, when using external identity providers, assigning roles via the newly introduced `groups` property would not work. For example, with Auth0, the following configuration would not work:
 
 ```diff-ts
     /**
@@ -35,7 +35,7 @@ Using Auth0 and assigning roles via the newly introduced `groups` property would
                 type: "admin",
                 displayName: token["name"],
                 
-+               // This would not work.
++               // This would work.
 +               group: "full-access",
 
 -               // This would not work.
@@ -47,8 +47,6 @@ Using Auth0 and assigning roles via the newly introduced `groups` property would
 
 With this release, this has been addressed and both `group` and `groups` properties can now be used to assign roles when using external identity providers.
 
-Additionally, we've also addressed an issue where even the `group`  
-
 <Alert>
 
   As mentioned in the [5.41.0 release notes](/docs/release-notes/5.41.0/changelog), the `group` property has been deprecated. Users are encouraged to use the `groups` property instead.
@@ -57,7 +55,7 @@ Additionally, we've also addressed an issue where even the `group`
 
 #### 2. Programmatically Created Roles Now Work As Expected
 
-When using external identity providers, trying to assign a role to a user that was programmatically created would not work. This has been addressed, and now users can assign roles to programmatically created users when using external identity providers.
+When using external identity providers, trying to assign a role to a user that was programmatically created would not work. This has now been addressed.
 
 <Alert>
 
@@ -67,7 +65,7 @@ When using external identity providers, trying to assign a role to a user that w
 
 #### 3. Ability To Assign Teams ([#4349](https://github.com/webiny/webiny-js/pull/4349)]
 
-Since the introduction of the Teams feature, users were not able to assign teams to users when using external identity providers. We've addressed this issue, and now users can assign teams to users when using external identity providers.
+Since the introduction of the Teams feature, users were not able to assign teams to users when using external identity providers. With this release, this gap has finally been closed.
 
 <Alert type="info">
 
