wip: create 5.41.1 release notes

--- a/docs/release-notes/5.41.1/changelog.mdx
+++ b/docs/release-notes/5.41.1/changelog.mdx
@@ -88,7 +88,7 @@ The extension can be accessed like any other extension, via the `yarn webiny sca
 
 With the new **Page Builder element** extension, we've also introduced the new **Website** extension, which makes it easier to start extending Webiny's **Website** application.
 
-As already mentioned above, in the same fashion, the extension can be accesssed via the `yarn webiny scaffold`, or the new `yarn webiny extension` command.
+As already mentioned above, in the same fashion, the extension can be accessed via the `webiny scaffold`, or the new [`webiny extension`](/docs/release-notes/5.41.1/changelog#the-webiny-extension-command) command.
 
 ### New Page Element Plugins ([#4340](https://github.com/webiny/webiny-js/pull/4340))
 
@@ -115,4 +115,4 @@ Up until now, in order to scaffold a new extension, users had to run the `yarn w
 
 Essentially, everything stays the same, but now, instead of running `yarn webiny scaffold`, users can run `yarn webiny extension` to scaffold a new extension.
 
-Note that the `webiny scaffold` command will still work, but moving forward, we recommend using the new `webiny extension` command.
+Note that the `webiny scaffold` command will still work, but moving forward, we'll be emphasizing the use of the new `webiny extension` command.
