wip: create 5.41.1 release notes

--- a/docs/developer-docs/5.41.x/enterprise/okta-integration.mdx
+++ b/docs/developer-docs/5.41.x/enterprise/okta-integration.mdx
@@ -131,11 +131,11 @@ export default ({ documentClient }: { documentClient: DocumentClient }) => [
 +               displayName: token["name"],
 +
 +               // Assign a security group slug, to load user's permissions.
-+               groups: [token["group"]]
++               groups: [token["webiny_group"]]
 +
 +               // With the Teams feature enabled, you can also assign teams to the user.
 +               // Learn more: https://www.webiny.com/docs/enterprise/aacl/teams
-+               // teams: [token.webiny_team]
++               // teams: [token["webiny_team"]]
 +
 +               // Assign any custom values you might need.
 +           };
