wip: create 5.41.1 release notes

--- a/docs/release-notes/5.41.1/changelog.mdx
+++ b/docs/release-notes/5.41.1/changelog.mdx
@@ -76,13 +76,17 @@ Since the introduction of the Teams feature, users were not able to assign teams
 
 ## Page Builder
 
-### New "Page Builder Element" Extension ([#4342](https://github.com/webiny/webiny-js/pull/4342))
+[//]: # (TODO: We had a longer discussion on the APIs for registering new page elements, and for now, we'll pause any announcements.)
+[//]: # (### New "Page Builder Element" Extension &#40;[#4342]&#40;https://github.com/webiny/webiny-js/pull/4342&#41;&#41;)
 
-We've introduced a new type of an extension called Page Builder element.
+[//]: # ()
+[//]: # (We've introduced a new type of an extension called Page Builder element.)
 
-Once run, the extension will make sure a users ends up with all of the required files and configurations for a new Page Builder element plugin. This will make it easier for users to start developing new Page Builder elements.
+[//]: # ()
+[//]: # (Once run, the extension will make sure a users ends up with all of the required files and configurations for a new Page Builder element plugin. This will make it easier for users to start developing new Page Builder elements.)
 
-The extension can be accessed like any other extension, via the `yarn webiny scaffold` command, by then selecting **New Extension** from the list of all available scaffolds, and ultimately choosing **Page Builder Element**.
+[//]: # ()
+[//]: # (The extension can be accessed like any other extension, via the `yarn webiny scaffold` command, by then selecting **New Extension** from the list of all available scaffolds, and ultimately choosing **Page Builder Element**.)
 
 ### New "Website" Extension ([#4344](https://github.com/webiny/webiny-js/pull/4344))
 
@@ -90,11 +94,14 @@ With the new **Page Builder element** extension, we've also introduced the new *
 
 As already mentioned above, in the same fashion, the extension can be accessed via the `webiny scaffold`, or the new [`webiny extension`](/docs/release-notes/5.41.1/changelog#the-webiny-extension-command) command.
 
-### New Page Element Plugins ([#4340](https://github.com/webiny/webiny-js/pull/4340))
+[//]: # (TODO: We had a longer discussion on the APIs for registering new page elements, and for now, we'll pause any announcements.
+[//]: # (### New Page Element Plugins &#40;[#4340]&#40;https://github.com/webiny/webiny-js/pull/4340&#41;&#41;)
 
-In order to be more in line with the new [Page Builder element extension](/docs/release-notes/5.41.1/changelog#new-page-builder-element-extension-4342), and also some of the best practices we've been pushing lately, we've updated the existing Page Builder element plugins. Essentially, instead of using plain JavaScript objects, users will now do the same via React components.
+[//]: # ()
+[//]: # (In order to be more in line with the new [Page Builder element extension]&#40;/docs/release-notes/5.41.1/changelog#new-page-builder-element-extension-4342&#41;, and also some of the best practices we've been pushing lately, we've updated the existing Page Builder element plugins. Essentially, instead of using plain JavaScript objects, users will now do the same via React components.)
 
-Note that the previous way of creating Page Builder element plugins will still work, but moving on, we recommend using the new way.
+[//]: # ()
+[//]: # (Note that the previous way of creating Page Builder element plugins will still work, but moving on, we recommend using the new way.)
 
 <Alert type={"info"}>
 
