wip: create 5.41.1 release notes

--- a/docs/release-notes/5.41.1/changelog.mdx
+++ b/docs/release-notes/5.41.1/changelog.mdx
@@ -103,10 +103,19 @@ As already mentioned above, in the same fashion, the extension can be accessed v
 [//]: # ()
 [//]: # (Note that the previous way of creating Page Builder element plugins will still work, but moving on, we recommend using the new way.)
 
-<Alert type={"info"}>
+[//]: # (<Alert type={"info"}>)
 
-Our existing [Create a Custom Page Element](/docs/page-builder/extending/create-a-page-element) article has been
-updated to reflect these changes.
+[//]: # ()
+[//]: # (Our existing [Create a Custom Page Element]&#40;/docs/page-builder/extending/create-a-page-element&#41; article has been)
+
+[//]: # (updated to reflect these changes.)
+
+[//]: # ()
+[//]: # (</Alert>)
+
+<Alert>
+
+  At the moment, there aren't any code examples that include the new **Website** extension. We'll be adding them in the upcoming releases.
 
 </Alert>
 
@@ -118,7 +127,7 @@ Prior to this release, in case a user immediately tried to [watch](/docs/core-de
 
 ### The `webiny extension` Command
 
-Up until now, in order to scaffold a new extension, users had to run the `yarn webiny scaffold` command, and then select **New Extension** from the list of all available scaffolds. And although this isn't a big deal, still, since extensions are becoming more and more important in the last couple of releases, we've decided to introduce a new command called `webiny extension`.
+Up until now, in order to scaffold a new extension, users had to run the `yarn webiny scaffold` command, and then select **New Extension** from the list of all available scaffolds. And although this isn't a big deal, still, since extensions are becoming more and more important in the last couple of releases, we've decided to introduce a new command called [`webiny extension`](/docs/core-development-concepts/basics/webiny-cli#yarn-webiny-extension).
 
 Essentially, everything stays the same, but now, instead of running `yarn webiny scaffold`, users can run `yarn webiny extension` to scaffold a new extension.
 
