feat: create 5.41.1 release notes (#704)
* wip: create 5.41.1 release notes

* wip: create 5.41.1 release notes

* wip: create 5.41.1 release notes

* wip: create 5.41.1 release notes

* wip: create 5.41.1 release notes

* wip: create 5.41.1 release notes

* wip: create 5.41.1 release notes

* wip: create 5.41.1 release notes

* wip: create 5.41.1 release notes

* wip: create 5.41.1 release notes

* wip: create 5.41.1 release notes

* wip: create 5.41.1 release notes

* wip: create 5.41.1 release notes

* wip: create 5.41.1 release notes

* wip: create 5.41.1 release notes

* wip: create 5.41.1 release notes

* wip: create 5.41.1 release notes

* wip: create 5.41.1 release notes

--- a/docs/developer-docs/5.41.x/enterprise/okta-integration.mdx
+++ b/docs/developer-docs/5.41.x/enterprise/okta-integration.mdx
@@ -126,10 +126,18 @@ export default ({ documentClient }: { documentClient: DocumentClient }) => [
 +        */
 +       getIdentity({ token }) {
 +           return {
-+               id: token.sub,
++               id: token["sub"],
 +               type: "admin",
-+               displayName: token.name,
-+               groups: [token.webiny_group]
++               displayName: token["name"],
++
++               // Assign a security group slug, to load user's permissions.
++               groups: [token["webiny_group"]]
++
++               // With the Teams feature enabled, you can also assign teams to the user.
++               // Learn more: https://www.webiny.com/docs/enterprise/aacl/teams
++               // teams: [token["webiny_team"]]
++
++               // Assign any custom values you might need.
 +           };
 +       }
 +   }),
