--- a/docs/developer-docs/5.41.x/enterprise/auth0-integration.mdx
+++ b/docs/developer-docs/5.41.x/enterprise/auth0-integration.mdx
@@ -131,8 +131,14 @@ export default ({ documentClient }: { documentClient: DocumentClient }) => [
 +               id: token["sub"],
 +               type: "admin",
 +               displayName: token["name"],
++
 +               // Assign a security group slug, to load user's permissions.
-+               groups: [token["group"]]
++               groups: [token["webiny_group"]]
++
++               // With the Teams feature enabled, you can also assign teams to the user.
++               // Learn more: https://www.webiny.com/docs/enterprise/aacl/teams
++               // teams: [token["webiny_team"]]
++
 +               // Assign any custom values you might need.
 +           };
 +       }
