chore: add changelog items

--- a/docs/release-notes/5.41.2/changelog.mdx
+++ b/docs/release-notes/5.41.2/changelog.mdx
@@ -4,6 +4,9 @@ title: Webiny 5.41.2 Changelog
 description: See what's new in Webiny version 5.41.2
 ---
 
+import multiValueRenderers from "./assets/multi-value-renderers.png";
+import lexicalEditorTheme from "./assets/lexical-editor-theme.png";
+
 <GithubRelease version={"5.41.2"} />
 
 ## Headless CMS
@@ -12,11 +15,27 @@ description: See what's new in Webiny version 5.41.2
 
 ✍️
 
+### Improve Multi-Value Field Renderers ([#4404](https://github.com/webiny/webiny-js/pull/4404))
+
+We've improved the way multi-value field renderers work in the Headless CMS. The `DynamicSection` component (which powers all multi-value renderers) no longer adds the initial item UI, which was causing many issues with validation, and users were unable to remove that first item, which was also unintuitive.
+
+The labels and behavior is now standardized across all multi-value renderers, the field label looks the same, prints help text in the same place across all fields, and also counts the number of items in the data set. The initial item UI is no longer added, and users can remove all items from the data set.
+
+<Image src={multiValueRenderers} title="Multi-Value Field Renderers" />
+
+### Fix Entry Form Validation Errors
+
+We've fixed a bug where errors from the API were not correctly formatted, and were passed to the `Form` component in a wrong shape, resulting in errors not being shown in the UI. This is now fixed, and errors from the API are correctly displayed as validation messages, right below the input they belong to.
+
 ## Page Builder
 
 ### Use Correct Keys Upon Applying Border Radius Separately ([#4369](https://github.com/webiny/webiny-js/pull/4369))
 
-✍️
+### Expose New Page Element Control Overlay Features ([#4396](https://github.com/webiny/webiny-js/pull/4396))
+
+Developers can now hook into the page element control overlay using component decoration, and control several new props: `canDrag`, `canEdit`, `canHighlight`, and `canActivate`. This allows developers to customize each element behaviour based on user's permissions, page properties, etc.
+
+We've also introduced a new Page Editor hook, called `useMoveElement`, which gives developers a simple API to move elements up, down, left, or right, within the parent element.
 
 ## Deployments
 
@@ -30,6 +49,12 @@ description: See what's new in Webiny version 5.41.2
 
 ## Other Improvements
 
-### Lifecycle Event Handlers - Add Error Logging ([#4391](https://github.com/webiny/webiny-js/pull/4391)) 
+### Lifecycle Event Handlers - Add Error Logging ([#4391](https://github.com/webiny/webiny-js/pull/4391))
 
 ✍️
+
+### Improve Lexical Editor Theme Handling ([#4395](https://github.com/webiny/webiny-js/pull/4395))
+
+We've improved Lexical theme handling, and you can now decorate the `RichTextEditor` component, and modify the classes of the Lexical editor. This is usually useful when you're adding third party plugins, which expect certain classes to exist, and you want to be able to define them, or override with your own classes.
+
+<Image src={lexicalEditorTheme} title={"Lexical Theme Customization"} />
